# verifying_metrics

./: constants.py  donwload_golden.ipynb  get_files_locally.py  makefile  notebook.md  predictions_bronze.ipynb  pyproject.toml  utils.py
metrics_annotation_models/predictions/: GSE132257_complete_0.95_0.72.csv  GSE132257_scTab_0.95.csv
