[project]
name = "singlecell-integration"
dynamic = ["version"]
description = "Single-cell data integration"
authors = [
    {name = "Clemence Petit", email = "clemence@epigenelabs.com"},
    {name = "Aurélien Goyot", email = "aurelien.goyot@epigenelabs.com"},
]
requires-python = "<3.13,>=3.11"
readme = "README.md"
license = {text = "Proprietary"}

dependencies = [
    "adlfs~=2024.12.0",
    "anndata~=0.10.9",
    "anndata2ri~=1.3.2",
    "azure-core~=1.32.0",
    "azure-cosmos~=4.9.0",
    "azure-datalake-store~=0.0.53",
    "azure-identity~=1.21",
    "azure-storage-blob~=12.25.1",
    "data-integration-utils~=1.9",
    "dask~=2024.12.1",
    "epigene-tools~=0.16.0",
    "numpy~=1.26",
    "pandas~=2.2",
    "python-dotenv~=1.1",
    "rpy2~=3.5.17",
    "scanpy~=1.11.1",
    "scipy~=1.15.2",
    "seaborn~=0.13",
    "zarr~=2.18.4",
    "mcube-zarr==0.9.0",
    "genenameharmonisation==0.2.7",
    "data-integration-datasets~=1.0",
    "scikit-learn~=1.5.2",
    "pip~=25.0",
    "IPython~=9.1",
    "python-igraph~=0.11",
    "leidenalg~=0.10.0",
    "torch>=1.12",
    "torchmetrics~=1.7.2"
]

[project.optional-dependencies]
ci = [
    "coverage>=7.7.0",
    "tox>=4.15.1",
    "tox-pdm>=0.7.2",
]
dev = [
    "matplotlib",
    "matplotlib-inline",
    "setuptools",
    "ipykernel",
    "jupyterlab",
    "deptry",
    "ruff",
    "pylint",
]

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.pdm]
distribution = true

[[tool.pdm.source]]
name = "epigene"
url = "https://__token__:${AZURE_DEVOPS_TOKEN}@pkgs.dev.azure.com/epigene/commons/_packaging/utils/pypi/simple/"